styling for doctor name lookup complete, begin setting up interface for ailment lookup.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
-#result {
+#result{
   display: none;
+}
+
+.address {
+  font-style: oblique;
+}
+
+.phone {
+  font-size: 10px;
+}
+
+.practice {
+  color: green;
 }
